Dummy_Package_for_scratch_org/main/default/objects/Git_Org_Commit__c/Git_Org_Commit__c.object-meta.xml
<CustomObject>
    <description>This object stores the individual commits to a Git repository executed by Copado Deployer.</description>
    <label>Snapshot Commit</label>
    <nameField>
        <displayFormat>Cmt-{0000}</displayFormat>
        <label>Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>