Dummy_Package_for_scratch_org/main/default/objects/Git_Org_Commit__c/fields/Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Commit Date</label>
    <type>DateTime</type>
</CustomField>