Dummy_Package_for_scratch_org/main/default/objects/Git_Org_Commit__c/fields/Commit_Id__c.field-meta.xml
<CustomField>
    <fullName>Commit_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Commit Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>