Dummy_Package_for_scratch_org/main/default/objects/Git_Org_Commit__c/fields/Commit_Message__c.field-meta.xml
<CustomField>
    <fullName>Commit_Message__c</fullName>
    <label>Commit Message</label>
    <type>TextArea</type>
</CustomField>