Dummy_Package_for_scratch_org/main/default/objects/Git_Org_Commit__c/fields/Git_Backup__c.field-meta.xml
<CustomField>
    <fullName>Git_Backup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Git Snapshot</label>
    <referenceTo>Git_Backup__c</referenceTo>
    <relationshipName>Git_Org_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>