Dummy_Package_for_scratch_org/main/default/objects/Git_Org_Commit__c/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <label>Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Snapshot Commits</relationshipLabel>
    <relationshipName>Git_Org_Commits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>