Dummy_Package_for_scratch_org/main/default/objects/Git_Org_Commit__c/fields/View_in_Git__c.field-meta.xml
<CustomField>
    <fullName>View_in_Git__c</fullName>
    <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(Git_Backup__r.Git_Repository__r.Commit_Base_URL__c)), Git_Backup__r.Git_Repository__r.Commit_Base_URL__c != &apos;&apos;),
		IF(
			AND(NOT(ISPICKVAL(Git_Backup__r.Git_Repository__r.Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(Git_Backup__r.Git_Repository__r.Git_Provider__c, &apos;Others&apos;))),
			Git_Backup__r.Git_Repository__r.Commit_Base_URL__c +  Commit_Id__c,
			IF(
				CONTAINS(Git_Backup__r.Git_Repository__r.Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;),
				SUBSTITUTE(Git_Backup__r.Git_Repository__r.Commit_Base_URL__c,&apos;[COMMIT_ID]&apos;,Commit_Id__c),
				Git_Backup__r.Git_Repository__r.Commit_Base_URL__c + Commit_Id__c
			)
		),
	&apos;&apos;), 
	Commit_Id__c
)</formula>
    <label>View in Git</label>
    <type>Text</type>
</CustomField>