Dummy_Package_for_scratch_org/main/default/objects/Git_Org_Commit__c/validationRules/Commit_Id_Status_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Commit_Id_Status_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !ISBLANK(Commit_Id__c), OR(ISPICKVAL(Status__c,&quot;Pending&quot;),ISPICKVAL(Status__c,&quot;No changes&quot;)))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>The commit status cannot be &apos;Pending&apos; or &apos;No changes&apos; whenever there is a commit Id.</errorMessage>
</ValidationRule>